--- a/EFCoreMovies/appsettings.Development.json
+++ b/EFCoreMovies/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=EFCoreMoviesDB.db"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EFCoreMoviesDB;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
